--- a/core/pom.xml
+++ b/core/pom.xml
@@ -21,9 +21,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.apache.mahout</groupId>
+    <groupId>com.mapr.mahout</groupId>
     <artifactId>mahout</artifactId>
-    <version>0.7</version>
+    <version>0.7-mapr-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
@@ -33,6 +33,10 @@
   <description>Scalable machine learning libraries</description>
 
   <packaging>jar</packaging>
+
+  <properties>
+    <mapr.hadoop.version>0.20.2-2.1.2-SNAPSHOT</mapr.hadoop.version>
+  </properties>
 
   <build>
     <plugins>
@@ -213,8 +217,10 @@
       </activation>
       <dependencies>
         <dependency>
-          <groupId>org.apache.hadoop</groupId>
-          <artifactId>hadoop-core</artifactId>
+          <groupId>com.mapr.hadoop</groupId>
+          <artifactId>hadoop-all</artifactId>
+          <version>${mapr.hadoop.version}</version>
+          <type>pom</type>
         </dependency>
       </dependencies>
     </profile>
