--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -18,12 +18,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.apache.mahout</groupId>
+    <groupId>com.mapr.mahout</groupId>
     <artifactId>mahout</artifactId>
-    <version>0.7</version>
+    <version>0.7-mapr-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
-  <groupId>org.apache.mahout</groupId>
+  <groupId>com.mapr.mahout</groupId>
   <artifactId>mahout-distribution</artifactId>
   <version>0.7</version>
   <name>Mahout Release Package</name>
