--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -22,9 +22,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.apache.mahout</groupId>
+    <groupId>com.mapr.mahout</groupId>
     <artifactId>mahout</artifactId>
-    <version>0.7</version>
+    <version>0.7-mapr-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
