--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>com.mapr.mahout</groupId>
     <artifactId>mahout</artifactId>
-    <version>0.7-mapr-SNAPSHOT</version>
+    <version>0.7-mapr</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <groupId>com.mapr.mahout</groupId>
