--- a/math/pom.xml
+++ b/math/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>com.mapr.mahout</groupId>
     <artifactId>mahout</artifactId>
-    <version>0.7-mapr-SNAPSHOT</version>
+    <version>0.7-mapr</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
