--- a/buildtools/pom.xml
+++ b/buildtools/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>org.apache.mahout</groupId>
     <artifactId>mahout</artifactId>
-    <version>0.7</version>
+    <version>0.7-mapr</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
