--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -22,7 +22,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>com.mapr.mahout</groupId>
+    <groupId>org.apache.mahout</groupId>
     <artifactId>mahout</artifactId>
     <version>0.7-mapr</version>
     <relativePath>../pom.xml</relativePath>
