--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.mapr.mahout</groupId>
+  <groupId>org.apache.mahout</groupId>
   <artifactId>mahout</artifactId>
   <version>0.7-mapr</version>
 
@@ -100,7 +100,7 @@
     <lucene.version>3.6.0</lucene.version>
 
     <!-- MapR custom properties -->
-    <mapr.hadoop.version>0.20.2-2.1.2</mapr.hadoop.version>
+    <mapr.hadoop.version>1.0.3-mapr-2.1.2.1</mapr.hadoop.version>
     <apache.git.tag>0.7</apache.git.tag>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -109,8 +109,32 @@
     <system>Jira</system>
     <url>https://issues.apache.org/jira/browse/MAHOUT</url>
   </issueManagement>
-  
+
+  <distributionManagement>
+    <repository>
+      <id>mapr.staging</id>
+      <name>Mapre Staging Repository</name>
+      <url>${mapr-maven}</url>
+    </repository>
+    <site>
+      <id>mapr.website</id>
+      <url>www.mapr.com</url>
+      <name>MapR Site</name>
+    </site>
+  </distributionManagement>
+
+
   <repositories>
+    <repository>
+      <id>repository.mapr.com</id>
+      <url>http://repository.mapr.com/maven/</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
     <repository>
       <id>apache.snapshots</id>
       <name>Apache Snapshot Repository</name>
@@ -194,10 +218,9 @@
       </dependency>
 
       <dependency>
-        <groupId>com.mapr.hadoop</groupId>
-        <artifactId>hadoop-all</artifactId>
+        <groupId>org.apache.hadoop</groupId>
+        <artifactId>hadoop-core</artifactId>
         <version>${mapr.hadoop.version}</version>
-        <type>pom</type>
       </dependency>
 
       <dependency>
@@ -666,12 +689,6 @@
     <developerConnection>scm:svn:https://svn.apache.org/repos/asf/mahout/tags/mahout-0.7</developerConnection>
     <url>https://svn.apache.org/repos/asf/mahout/tags/mahout-0.7</url>
   </scm>
-  <distributionManagement>
-    <site>
-      <id>Website</id>
-      <url>scp://people.apache.org/home/isabel/public_html/mahout_site</url>
-    </site>
-  </distributionManagement>
   <reporting>
     <plugins>
       <!-- surefire runs unit tests -->
