--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -49,6 +49,7 @@
             </goals>
             <configuration>
               <!-- configure the plugin here -->
+             <excludeArtifactIds>hadoop-all,hadoop-core</excludeArtifactIds>
             </configuration>
           </execution>
         </executions>
@@ -145,7 +146,6 @@
       <artifactId>junit</artifactId>
       <scope>test</scope>
     </dependency>
-
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
@@ -156,7 +156,6 @@
       <artifactId>slf4j-jcl</artifactId>
       <scope>runtime</scope>
     </dependency>
-
   </dependencies>
 
   <profiles>
