--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <groupId>org.apache.mahout</groupId>
     <artifactId>mahout</artifactId>
-    <version>0.9</version>
+    <version>0.9-mapr</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
