--- a/math/pom.xml
+++ b/math/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>org.apache.mahout</groupId>
     <artifactId>mahout</artifactId>
-    <version>0.9-mapr</version>
+    <version>0.9-mapr-1406</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
