prepare for release 0.9-mapr-1408

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.mahout</groupId>
   <artifactId>mahout</artifactId>
-  <version>0.9-mapr</version>
+  <version>0.9-mapr-1408</version>
 
   <parent>
     <groupId>com.mapr</groupId>
