--- a/buildtools/pom.xml
+++ b/buildtools/pom.xml
@@ -21,15 +21,15 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.apache</groupId>
-    <artifactId>apache</artifactId>
-    <version>16</version>
+    <groupId>com.mapr</groupId>
+    <artifactId>mapr-root</artifactId>
+    <version>1.0</version>
     <relativePath />
   </parent>
 
   <groupId>org.apache.mahout</groupId>
   <artifactId>mahout-buildtools</artifactId>
-  <version>0.10.0</version>
+  <version>0.10.0-mapr</version>
   <name>Mahout Build Tools</name>
 
   <packaging>jar</packaging>
