--- a/pom.xml
+++ b/pom.xml
@@ -20,14 +20,14 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.apache</groupId>
-    <artifactId>apache</artifactId>
-    <version>16</version>
+    <groupId>com.mapr</groupId>
+    <artifactId>mapr-root</artifactId>
+    <version>1.0</version>
   </parent>
 
   <groupId>org.apache.mahout</groupId>
   <artifactId>mahout</artifactId>
-  <version>0.10.0</version>
+  <version>0.10.0-mapr</version>
 
   <packaging>pom</packaging>
   <name>Apache Mahout</name>
@@ -121,11 +121,29 @@
     <scala.version>2.10.4</scala.version>
     <spark.version>1.1.1</spark.version>
     <h2o.version>0.1.25</h2o.version>
+
+    <!-- MapR custom properties -->
+    <mapr.hadoop.version>1.2.1-mapr</mapr.hadoop.version>
+    <apache.git.tag>0.10.0</apache.git.tag>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>
   <issueManagement>
     <system>Jira</system>
     <url>https://issues.apache.org/jira/browse/MAHOUT</url>
   </issueManagement>
+  <distributionManagement>
+    <repository>
+      <id>mapr.staging</id>
+      <name>Mapr Staging Repository</name>
+      <url>${mapr-maven}</url>
+    </repository>
+    <site>
+      <id>mapr.website</id>
+      <name>MapR Site</name>
+      <url>www.mapr.com</url>
+    </site>
+  </distributionManagement>
 
   <repositories>
     <repository>
@@ -143,6 +161,30 @@
     <repository>
       <id>mapr</id>
       <url>http://repository.mapr.com/maven</url>
+    </repository>
+    <repository>
+      <id>repository.mapr.com</id>
+      <url>http://repository.mapr.com/maven/</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>central</id>
+      <url>http://repo1.maven.org/maven2</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>Codehaus repository</id>
+      <url>http://repository.codehaus.org/</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
     </repository>
   </repositories>
 
