--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>org.apache.mahout</groupId>
     <artifactId>mahout</artifactId>
-    <version>0.10.0-mapr</version>
+    <version>0.10.0-mapr-1505</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <artifactId>mahout-distribution</artifactId>
