--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 
   <groupId>org.apache.mahout</groupId>
   <artifactId>mahout</artifactId>
-  <version>0.10.0-mapr</version>
+  <version>0.10.0-mapr-1507</version>
 
   <packaging>pom</packaging>
   <name>Apache Mahout</name>
