--- a/pom.xml
+++ b/pom.xml
@@ -843,7 +843,7 @@
       </activation>
       <properties>
         <hadoop.classifier>hadoop2</hadoop.classifier>
-        <hadoop.version>2.4.1</hadoop.version>
+        <hadoop.version>2.5.1-mapr-1503</hadoop.version>
       </properties>
       <dependencyManagement>
         <dependencies>
