--- a/buildtools/pom.xml
+++ b/buildtools/pom.xml
@@ -29,7 +29,7 @@
 
   <groupId>org.apache.mahout</groupId>
   <artifactId>mahout-buildtools</artifactId>
-  <version>0.11.0-mapr</version>
+  <version>0.11.0-mapr-1509</version>
   <name>Mahout Build Tools</name>
 
   <packaging>jar</packaging>
