--- a/pom.xml
+++ b/pom.xml
@@ -120,7 +120,7 @@
     <slf4j.version>1.7.12</slf4j.version>
     <scala.compat.version>2.10</scala.compat.version>
     <scala.version>2.10.4</scala.version>
-    <spark.version>1.4.1</spark.version>
+    <spark.version>1.5.2-mapr-1602</spark.version>
     <h2o.version>0.1.25</h2o.version>
     <!-- MapR custom properties -->
     <mapr.hadoop.version>1.2.1-mapr</mapr.hadoop.version>
