--- a/pom.xml
+++ b/pom.xml
@@ -28,11 +28,7 @@
   <groupId>org.apache.mahout</groupId>
   <artifactId>mahout</artifactId>
 
-<<<<<<< HEAD
-  <version>0.12.0-mapr</version>
-=======
-  <version>0.12.1</version>
->>>>>>> 92ef9e5... [maven-release-plugin] prepare release mahout-0.12.1
+  <version>0.12.2-SNAPSHOT</version>
 
   <packaging>pom</packaging>
   <name>Apache Mahout</name>
@@ -106,7 +102,7 @@
     <connection>scm:git:git@github.com:apache/mahout.git</connection>
     <developerConnection>scm:git:https://git-wip-us.apache.org/repos/asf/mahout.git</developerConnection>
     <url>https://git-wip-us.apache.org/repos/asf?p=mahout.git;a=tree;h=refs/heads/${project.scm.tag};hb=${project.scm.tag}</url>
-    <tag>mahout-0.12.1</tag>
+    <tag>master</tag>
   </scm>
   <properties>
     <skipTests>false</skipTests>
