--- a/hdfs/pom.xml
+++ b/hdfs/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>org.apache.mahout</groupId>
     <artifactId>mahout</artifactId>
-    <version>0.12.0-mapr</version>
+    <version>0.12.0-mapr-1611</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
